<resources>
    <string name="app_name">Tasky</string>
    <string name="action_settings">Settings</string>
    <string name="messageToLbl">SEND MESSAGE TO:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="main_msg">To get started chose between one of the options below</string>
    <string name="tasks">Tasks</string>
    <string name="events">Events</string>
    <string name="schedule_text_message">Schedule Text Message</string>
    <string name="pick_time">PICK TIME</string>
    <string name="pick_date">PICK DATE</string>
    <string name="write_message_here">Write Message Here</string>
    <string name="title_event">Title</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="pick_a_time">Pick a Time</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo</string>
    <string name="permission_SMS">Permission to send SMS</string>
    <string name="send_msg_to">"Schedule a message to "</string>
    <string name="msg_scheduled">Message scheduled!</string>
    <string name="delete">Delete</string>
    <string name="event">"Event: "</string>
    <string name="date">"Date "</string>
    <string name="time">"Time: "</string>
    <string name="details">"Details "</string>
</resources>
