<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prompts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/back_event"


    >

    <ImageView
        android:layout_centerHorizontal="true"
        android:id ="@+id/addImage"
        android:layout_height="195dp"
        android:layout_width="214dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:background="@color/backGround"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/linearLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/titleTxt"
        android:hint="@string/title_event" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pick_a_date"
        android:layout_marginLeft="5dp"
        android:textSize="20dp"
        android:id="@+id/dateTxt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pick_a_time"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textSize="20dp"
        android:id="@+id/timeTxt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/descriptionTxt"
        android:hint="@string/description"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/createBtn"
        android:text="@string/create" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/addImage"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />


</RelativeLayout>