<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.franfirmino.taskyapplication.ScheduleMessage.ScheduleMessage"
    android:layout_width="match_parent"
    android:background="@drawable/back_msg"
    android:layout_height="match_parent">

<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:background="@color/backGround"
        android:layout_centerHorizontal="true"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/nameMsg"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:id="@+id/datePick"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/pick_date"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:visibility="gone"
            android:id="@+id/dateTxt"
            />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/timeTxt"
            android:scaleX="0.7"
            android:visibility="gone"
            android:scaleY="0.7"
            android:layout_marginTop="10dp"
            android:layout_weight="0.26"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/timePick"
            android:text="@string/pick_time"/>

    </LinearLayout>


      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/dateShow"
              android:textSize="20dp"
              />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeShow"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            />


      </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msgInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/messageTxt"
            android:hint="@string/write_message_here"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/sendBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/schedule_text_message"/>


    </LinearLayout>

</RelativeLayout>

